// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectAllAction /> Snapshot does not render with no props 1`] = `null`;

exports[`<SelectAllAction /> Snapshot shows both select all and deselect 1`] = `
<div
  className="objectlist-row"
>
  <a
    className="objectlist-link"
    href="#"
    onClick={[Function]}
  >
    Select all 
    5
     
  </a>
  <a
    className="objectlist-link"
    href="#"
    onClick={[Function]}
  >
    De-select all
  </a>
</div>
`;

exports[`<SelectAllAction /> Snapshot shows deselect all when all the items are selected 1`] = `
<div
  className="objectlist-row"
>
  <a
    className="objectlist-link"
    href="#"
    onClick={[Function]}
  >
    De-select all
  </a>
</div>
`;

exports[`<SelectAllAction /> Snapshot shows deselect all when some of the items are selected 1`] = `
<div
  className="objectlist-row"
>
  <a
    className="objectlist-link"
    href="#"
    onClick={[Function]}
  >
    De-select all
  </a>
</div>
`;

exports[`<SelectAllAction /> Snapshot shows global select all when selected all on page 1`] = `
<div
  className="objectlist-row"
>
  <a
    className="objectlist-link"
    href="#"
    onClick={[Function]}
  >
    Select all 
    5
     
    kitties
  </a>
  <a
    className="objectlist-link"
    href="#"
    onClick={[Function]}
  >
    De-select all
  </a>
</div>
`;
